--- a/layui-2.0/css/component/popup.css
+++ b/layui-2.0/css/component/popup.css
@@ -386,6 +386,10 @@
     padding: 10px !important;
 }
 
+.layui-layer-msg i {
+    display: none !important;
+}
+
 /* 弹窗confirm */
 .confirm .layui-layer-title {
     display: block;
