--- a/layui-2.0/css/component/button.css
+++ b/layui-2.0/css/component/button.css
@@ -110,16 +110,18 @@ button {
 .select-btn-one .select-btn-downbit,.select-btn-two .select-btn-downbit{
 	position: absolute;
 	min-width: 100%;
-	top: 39px;
+	top: 38px;
 	display: none;
 	z-index: 9;
+	border-top: 1px solid #FFF;
 }
 .select-btn-one .select-btn-upbit,.select-btn-two .select-btn-upbit{
 	position: absolute;
 	min-width: 100%;
-	bottom: 39px;
+	bottom: 38px;
 	display: none;
 	z-index: 9999;
+	border-bottom: 1px solid #FFF;
 }
 .select-btn-one .select-btn-downbit .select-btn-tips,.select-btn-two .select-btn-downbit .select-btn-tips,.select-btn-one .select-btn-upbit .select-btn-tips,.select-btn-two .select-btn-upbit .select-btn-tips{
 	line-height: 38px;
