--- a/layui-2.0/css/component/date.css
+++ b/layui-2.0/css/component/date.css
@@ -90,7 +90,9 @@
  #layui-laydate3 {
      left: 155px !important;
  }
-
+ #layui-laydate4{
+     left: 755px !important;
+ }
  .terminate span {
      float: left;
      margin-left: 10px;
