--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -34,7 +34,7 @@
 @import url('component/popup.css');
 /* 日期选择 */
 @import url('component/date.css');
-/* 日期选择 */
+/* 富文本编辑器 */
 @import url('component/layedit.css');
 /* 徽章 */
 @import url('component/badge.css');
