--- a/layui-2.0/css/component/popup.css
+++ b/layui-2.0/css/component/popup.css
@@ -384,9 +384,11 @@
     padding-top: 0px !important;
     padding: 10px !important;
 }
-.layui-layer-msg i{
+
+.layui-layer-msg i {
     display: none !important;
 }
+
 /* 弹窗confirm */
 .confirm .layui-layer-title {
     display: block;
@@ -424,8 +426,90 @@
     margin-right: 19px !important;
 }
 
+/* 弹窗8 */
+.popup8 .layui-layer-title {
+    color: #060606;
+}
+
+.popup8 .layui-layer-content,
+.popup9 .layui-layer-content {
+    padding: 0px !important;
+}
+
+.popup8 .popup8-content,
+.popup9 .popup9-content {
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.popup8-content .input-second-container {
+    width: 470px;
+    padding-top: 20px;
+}
+
+.popup8-content .input-second-container .input-number {
+    margin-top: -2px;
+}
+
+.popup8 .layui-layer-btn {
+    padding: 0;
+    padding-top: 60px;
+    padding-bottom: 41px;
+    text-align: right;
+    padding-right: 30px;
+}
+
+.popup8 .layui-layer-btn .layui-layer-btn0,
+.popup9 .layui-layer-btn .layui-layer-btn0 {
+    border: 1px solid #999999 !important;
+    color: #333333 !important;
+}
 
 
+/* 弹窗9 */
+.popup9 .layui-layer-content{
+    text-align: left;
+}
+
+.popup9 .popup9-content .location{
+    color: #999999;
+    line-height: 16px;
+    font-size: 12px;
+}
+.popup9 .popup9-content .detailed-address{
+    color: #333333;
+}
+
+.popup9 .popup9-content .selected{
+    padding-top: 28px;
+    line-height: 12px;
+    padding-bottom: 10px;
+    color: #999999;
+}
+
+.popup9 .popup9-content .selected a{
+    margin-left: 30px;
+}
+.popup9 .popup9-content .table{
+    width: 480px;
+    height: 212px;
+    overflow-y: scroll;
+    border:1px solid #E3E3E3;
+}
+.popup9 .popup9-content .layui-table td{
+    border: none;
+}
+.popup9 .popup9-content .layui-table tbody tr:hover{
+    background-color: #FFFF;
+}
+
+.popup9 .layui-layer-btn {
+    padding: 0;
+    padding-top: 40px;
+    padding-bottom: 30px;
+    text-align: right;
+    padding-right: 30px;
+}
 
 
 /* 光标样式 */
