--- a/layui-2.0/css/component/table.css
+++ b/layui-2.0/css/component/table.css
@@ -4,61 +4,73 @@
  *	描述：数据表格组件
  */
 @charset "utf-8";
-.table .layui-table th{
-    font-size:12px;
-    font-family:PingFang SC;
+
+.table .layui-table th {
+    font-size: 12px;
+    font-family: PingFang SC;
     color: #666666;
 }
-.table .layui-table td{
-    font-size:12px;
-    font-family:PingFang SC;
+
+.table .layui-table td {
+    font-size: 12px;
+    font-family: PingFang SC;
     color: #333333;
 }
-.table .status:before{
-    content:'';
+
+.table .status:before {
+    content: '';
     position: absolute;
-    width:6px;
-    height:6px;
-    border-radius:50%;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
     left: 20px;
     top: 50%;
     margin-top: -2px;
 }
-.table .statusA:before{
-    content:'';
+
+.table .statusA:before {
+    content: '';
     background: #54F075;
 }
-.table .statusB:before{
-    content:'';
+
+.table .statusB:before {
+    content: '';
     background: #F0B354;
 }
-.table .statusC:before{
-    content:'';
+
+.table .statusC:before {
+    content: '';
     background: #54ACF0;
 }
-.table .statusD:before{
-    content:'';
+
+.table .statusD:before {
+    content: '';
     background: #999999;
 }
-.table .statusE:before{
-    content:'';
+
+.table .statusE:before {
+    content: '';
     background: #F05654;
 }
-.table .tableTitle{
+
+.table .tableTitle {
     text-align: left;
     white-space: nowrap;
 }
-.table .tableTitle .message{
-    width:68%;
+
+.table .tableTitle .message {
+    width: 68%;
     padding-left: 5px;
     white-space: normal;
 }
-.textOverflow{
+
+.textOverflow {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.textTwoOver{
+
+.textTwoOver {
     overflow: hidden;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
@@ -66,15 +78,19 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
-.table .c6{
+
+.table .c6 {
     color: #666666;
 }
-.table .c3{
+
+.table .c3 {
     color: #333333;
 }
-.table .pt-10{
+
+.table .pt-10 {
     padding-top: 5px;
 }
+
 .table .topArrow {
     transform: rotate(180deg);
     -ms-transform: rotate(180deg);
@@ -86,25 +102,29 @@
     position: absolute;
     top: -18px;
 }
+
 .table .bottomArrow {
     font-size: 5px;
     color: #999;
     position: absolute;
     top: -10px;
 }
-.table .inline_block{
+
+.table .inline_block {
     display: inline-block;
     width: 10px;
     height: 100%;
     position: relative;
 }
-.tableIcon{
+
+.tableIcon {
     cursor: pointer;
     position: absolute;
     right: 20px;
     top: 35%;
 }
-.tableIcon-content{
+
+.tableIcon-content {
     position: absolute;
     top: -100px;
     right: 9px;
@@ -112,7 +132,8 @@
     z-index: 99;
     display: none;
 }
-.tableIcon-block{
+
+.tableIcon-block {
     background-color: #FFF;
     padding: 15px 20px;
     color: #999;
@@ -120,7 +141,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.06);
     z-index: 99;
 }
-.tableIcon-hover-arrow{
+
+.tableIcon-hover-arrow {
     position: absolute;
     left: 50%;
     width: 0;
@@ -129,23 +151,101 @@
     border-width: 15px 15px 0 15px;
     border-color: #FFF transparent transparent transparent;
 }
-.table tfoot tr{
+
+.table tfoot tr {
     height: 60px;
 }
+
 /*flex布局*/
-.table .footFlex{
+.table .footFlex {
     display: flex;
     align-items: center;
 }
-.table .footFlex .fg{
+
+.table .footFlex .fg {
     flex-grow: 1;
 }
-.table .footFlex .footText{
+
+.table .footFlex .footText {
     padding-right: 60px;
     font-size: 14px;
 }
-.table .footFlex .sum{
+
+.table .footFlex .sum {
     flex-shrink: 0;
     font-size: 16px;
     color: #F05654;
+}
+
+
+
+/*
+    * 作者: ym
+    * 创建时间：2020/4/3
+    * 描述：数据表格5
+    */
+.table5 {
+    min-width: 1366px;
+}
+
+.table5 .status {
+    float: right;
+    padding-right: 80px;
+}
+
+.table5 tbody tr:hover {
+    background-color: #FFF !important;
+}
+
+.table5 .layui-table th:nth-child(1) {
+    border-right: none;
+}
+
+.table5 .layui-table th:nth-child(2),
+.table5 .layui-table th:nth-child(3),
+.table5 .layui-table th:nth-child(4),
+.table5 .layui-table th:nth-child(5) {
+    border-right: none;
+    border-left: none;
+}
+
+.table5 .layui-table th:nth-child(6) {
+    border-left: none;
+}
+
+
+.table5 .prompt-message td {
+    border: none;
+    padding: 0px;
+    line-height: 40px;
+}
+
+.table5 .prompt-message:hover {
+    background-color: #EEF7FD !important;
+}
+
+.table5 .prompt-message td:nth-child(6) {
+    border-right: 1px solid #e6e6e6 !important;
+}
+
+.table5 .information {
+    border-left: 1px solid #e6e6e6 !important;
+}
+
+.table5 .information .package {
+    padding-left: 13px;
+}
+
+.table5 .information .package,
+.table5 .information .logistics-status,
+.table5 .information .logistics-company {
+    padding-left: 20px;
+}
+
+.table5 .information .logistics {
+    margin-left: 20px;
+}
+
+.table5 .prompt-message {
+    background: #EEF7FD;
 }
