--- a/layui-2.0/css/component/rule.css
+++ b/layui-2.0/css/component/rule.css
@@ -6,11 +6,52 @@
 
 @charset "utf-8";
 
-.rule{
-    background-color:#fdf0c7;
-    padding:10px;
-    margin:10px;
+.rule {
+    background-color: #fdf0c7;
+    padding: 10px;
+    margin: 10px;
     font-size: 12px;
     color: #666;
     line-height: 18px;
+}
+
+
+
+/*
+ *	作者: ym
+ *	创建时间：2020/04/07
+ *	描述：订单提示组件
+ */
+.prompt-order {
+    background: #f0f0f0;
+    padding: 20px 20px 15px 20px;
+    margin: 10px;
+}
+
+.prompt-order .prompt-order-left {
+    float: left;
+}
+
+.prompt-order .prompt-order-left .current-status {
+    font-size: 16px;
+    line-height: 16px;
+    padding-bottom: 14px;
+}
+
+.prompt-order .prompt-order-right {
+    float: right;
+    padding-top: 6px;
+}
+
+.prompt-order .prompt-order-right span {
+    display: inline-block;
+    color: #fff;
+    font-size: 12px;
+    margin-left: 5px;
+    width: 48px;
+    height: 28px;
+    line-height: 28px;
+    text-align: center;
+    background: #54ACF0;
+    border-radius: 4px;
 }
