--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -399,6 +399,10 @@ body.large .layui-side.large {
     height: 0;
     clear: both;
 }
+/* 手型 */
+.cur-p{
+    cursor: pointer;
+}
 
 /* 浮左 */
 .float-left {
