--- a/layui-2.0/css/component/table.css
+++ b/layui-2.0/css/component/table.css
@@ -1,7 +1,7 @@
 /*
- *	作者: zby
- *	创建时间：
- *	描述：数据表格组件
+ *  作者: zby
+ *  创建时间：
+ *  描述：数据表格组件
  */
 @charset "utf-8";
 .table .layui-table th{
@@ -92,6 +92,9 @@
     position: absolute;
     top: -10px;
 }
+.table .bottomArrow.active.red,.table .topArrow.active.red{
+    color: #F05654;
+}
 .table .inline_block{
     display: inline-block;
     width: 10px;
@@ -176,4 +179,22 @@
 .table .goodNum .goodState{
     color: #54ACF0;
     flex-shrink: 0;
+}
+/*自定义table底部*/
+.table .teari{
+    text-align: right;
+}
+.table .teari .mgt-5{
+    margin-top: 5px;
+}
+.table .teari .mgt-5 .w75{
+    width: 75px;
+    text-align: left;
+}
+.table .teari .mgt-5 .w80{
+    width: 80px;
+}
+.table .teari .col14{
+    font-size: 14px;
+    color: #F05654;
 }
