--- a/layui-2.0/css/component/popup.css
+++ b/layui-2.0/css/component/popup.css
@@ -467,39 +467,43 @@
 
 
 /* 弹窗9 */
-.popup9 .layui-layer-content{
+.popup9 .layui-layer-content {
     text-align: left;
 }
 
-.popup9 .popup9-content .location{
+.popup9 .popup9-content .location {
     color: #999999;
     line-height: 16px;
     font-size: 12px;
 }
-.popup9 .popup9-content .detailed-address{
+
+.popup9 .popup9-content .detailed-address {
     color: #333333;
 }
 
-.popup9 .popup9-content .selected{
+.popup9 .popup9-content .selected {
     padding-top: 28px;
     line-height: 12px;
     padding-bottom: 10px;
     color: #999999;
 }
 
-.popup9 .popup9-content .selected a{
+.popup9 .popup9-content .selected a {
     margin-left: 30px;
 }
-.popup9 .popup9-content .table{
+
+.popup9 .popup9-content .table {
     width: 480px;
     height: 212px;
     overflow-y: scroll;
-    border:1px solid #E3E3E3;
+    border: 1px solid #E3E3E3;
 }
-.popup9 .popup9-content .layui-table td{
+
+.popup9 .popup9-content .layui-table td {
     border: none;
 }
-.popup9 .popup9-content .layui-table tbody tr:hover{
+
+.popup9 .popup9-content .layui-table tbody tr:hover {
     background-color: #FFFF;
 }
 
@@ -511,7 +515,111 @@
     padding-right: 30px;
 }
 
+/* 弹窗10 */
+.popup10 .popup10-content {
+    text-align: left;
+    padding-left: 17px;
+}
 
+.popup10 .popup10-content .location {
+    width: 470px;
+    height: 430px;
+    overflow-y: scroll;
+    border: 1px solid #E3E3E3;
+    padding-top: 20px;
+    padding-left: 10px;
+}
+
+.popup10 .popup10-content .location .layui-timeline-item:nth-child(1) .layui-text {
+    color: #54ACF0 !important;
+}
+
+.popup10 .popup10-content .location .layui-timeline-item {
+    width: 394px;
+}
+
+.popup10 .popup10-content .location .layui-text {
+    font-size: 12px !important;
+    color: #999999;
+}
+
+.popup10 .layui-layer-content {
+    padding-top: 20px !important;
+}
+
+.popup10 .popup10-content .layui-timeline-axis {
+    color: #54ACF0;
+    /* background-color:#54ACF0;
+    width: 9px;
+    height: 9px;
+    line-height: 9px;
+    left: -3px;
+    top: 8px; */
+}
+
+.popup10 .popup10-content .logistics {
+    padding-bottom: 20px;
+}
+
+.popup10 .popup10-content .logistics p {
+    font-size: 12px;
+    line-height: 12px;
+}
+
+.popup10 .popup10-content .logistics .waybill-no {
+    padding-left: 12px;
+    padding-top: 15px;
+}
+
+.popup10 .layui-layer-btn {
+    padding-top: 30px;
+    text-align: right;
+}
+
+.popup10 .layui-layer-btn .layui-layer-btn0 {
+    border-color: #54ACF0 !important;
+    background-color: #54ACF0 !important;
+    color: #fff !important;
+}
+
+
+
+/* 弹窗11 */
+
+.popup11 .layui-form .layui-input-block,
+.popup12 .layui-form .layui-input-block,
+.popup13 .layui-form .layui-input-block {
+    margin-left: 20px;
+}
+
+.popup11 .layui-form-item:nth-child(1) {
+    margin-bottom: 0px;
+}
+
+/* 弹窗12 */
+
+.popup12 .layui-form p {
+    padding-top: 10px;
+    font-size: 12px;
+    color: #999999;
+}
+
+
+/* 弹窗13 */
+
+.popup13 .layui-form .cascader{
+    padding-left: 20px;
+}
+
+.popup13 .layui-form input{
+    margin-bottom: 20px;
+}
+.popup13 .layui-layer-btn{
+    padding-top: 40px !important;
+}
+.popup13 .layui-form .cascader-model {
+    top: 39px;
+}
 /* 光标样式 */
 .cur-po {
     cursor: pointer;
