--- a/layui-2.0/css/component/rule.css
+++ b/layui-2.0/css/component/rule.css
@@ -48,7 +48,7 @@
     color: #fff;
     font-size: 12px;
     margin-left: 5px;
-    width: 48px;
+    padding: 0px 12px;
     height: 28px;
     line-height: 28px;
     text-align: center;
