--- a/layui-2.0/css/component/popup.css
+++ b/layui-2.0/css/component/popup.css
@@ -459,8 +459,7 @@
     padding-right: 30px;
 }
 
-.popup8 .layui-layer-btn .layui-layer-btn0,
-.popup9 .layui-layer-btn .layui-layer-btn0 {
+.popup8 .layui-layer-btn .layui-layer-btn0 {
     border: 1px solid #999999 !important;
     color: #333333 !important;
 }
@@ -512,7 +511,21 @@
     padding-top: 40px;
     padding-bottom: 30px;
     text-align: right;
-    padding-right: 30px;
+}
+
+.popup9 .layui-layer-btn .layui-layer-btn0 {
+    margin-right: 30px !important;
+    border-color: #54ACF0 !important;
+    background-color: #54ACF0 !important;
+    color: #fff !important;
+    float: right;
+}
+
+.popup9 .layui-layer-btn .layui-layer-btn1 {
+    margin-right: 40px;
+    border: 1px solid #999999 !important;
+    color: #333333 !important;
+    background-color: #ffff !important;
 }
 
 /* 弹窗10 */
@@ -549,12 +562,6 @@
 
 .popup10 .popup10-content .layui-timeline-axis {
     color: #54ACF0;
-    /* background-color:#54ACF0;
-    width: 9px;
-    height: 9px;
-    line-height: 9px;
-    left: -3px;
-    top: 8px; */
 }
 
 .popup10 .popup10-content .logistics {
@@ -607,19 +614,22 @@
 
 /* 弹窗13 */
 
-.popup13 .layui-form .cascader{
+.popup13 .layui-form .cascader {
     padding-left: 20px;
 }
 
-.popup13 .layui-form input{
+.popup13 .layui-form input {
     margin-bottom: 20px;
 }
-.popup13 .layui-layer-btn{
+
+.popup13 .layui-layer-btn {
     padding-top: 40px !important;
 }
+
 .popup13 .layui-form .cascader-model {
     top: 39px;
 }
+
 /* 光标样式 */
 .cur-po {
     cursor: pointer;
