--- a/layui-2.0/css/component/table.css
+++ b/layui-2.0/css/component/table.css
@@ -19,18 +19,21 @@
 
 .table .status:before {
     content: '';
-    position: absolute;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px;
     width: 6px;
     height: 6px;
     border-radius: 50%;
-    left: 20px;
-    top: 50%;
-    margin-top: -2px;
+    /* position: absolute; */
+    /* left: 20px; */
+    /* top: 50%; */
+    /* margin-top: -2px; */
 }
 
 .table .statusA:before {
     content: '';
-    background: #54F075;
+    background: #54ACF0;
 }
 
 .table .statusB:before {
@@ -59,7 +62,7 @@
 }
 
 .table .tableTitle .message {
-    width: 68%;
+    width: 64%;
     padding-left: 5px;
     white-space: normal;
 }
@@ -97,22 +100,25 @@
     -moz-transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
     -o-transform: rotate(180deg);
-    font-size: 5px;
+    font-size: 12px;
     color: #999;
     position: absolute;
     top: -18px;
 }
 
 .table .bottomArrow {
-    font-size: 5px;
+    font-size: 12px;
     color: #999;
     position: absolute;
     top: -10px;
 }
-.table .bottomArrow.active.red,.table .topArrow.active.red{
+
+.table .bottomArrow.active.red,
+.table .topArrow.active.red {
     color: #F05654;
 }
-.table .inline_block{
+
+.table .inline_block {
     display: inline-block;
     width: 10px;
     height: 100%;
@@ -191,9 +197,15 @@
 .table .marg-28 {
     margin-right: 28px;
 }
+
+.table .marg-50 {
+    margin-right: 50px;
+}
+
 .table .padd-10 {
     padding: 10px 0px;
 }
+
 .table .click-color {
     color: #54ACF0;
     cursor: pointer;
@@ -216,21 +228,26 @@
     color: #54ACF0;
     flex-shrink: 0;
 }
+
 /*自定义table底部*/
-.table .teari{
+.table .teari {
     text-align: right;
 }
-.table .teari .mgt-5{
+
+.table .teari .mgt-5 {
     margin-top: 5px;
 }
-.table .teari .mgt-5 .w75{
+
+.table .teari .mgt-5 .w75 {
     width: 75px;
     text-align: left;
 }
-.table .teari .mgt-5 .w80{
+
+.table .teari .mgt-5 .w80 {
     width: 80px;
 }
-.table .teari .col14{
+
+.table .teari .col14 {
     font-size: 14px;
     color: #F05654;
 }
@@ -240,7 +257,7 @@
 /*
  *	作者: ym
  *	创建时间：2020/04/07
- *	描述：数据表格组件
+ *	描述：数据表格组件/数据表格6
  */
 .table6 {
     min-width: 1366px;
@@ -249,11 +266,13 @@
     background-color: #ffff;
 }
 
-.table6 .layui-table tr:hover {
+.table6 .layui-table tr:hover,
+.table7 .layui-table tr:hover {
     background-color: #ffff;
 }
 
-.table6 .layui-table tr td {
+.table6 .layui-table tr td,
+.table7 .layui-table tr td {
     border: none;
 
 }
@@ -287,4 +306,174 @@
 
 .table6 .report-forms-particulars .balance-this-month {
     color: #F05654;
+}
+
+/*
+ *	作者: ym
+ *	创建时间：2020/04/07
+ *	描述：数据表格组件/数据表格7
+ */
+.table7 {
+    padding: 10px;
+    margin-top: 20px;
+    background: #fff;
+}
+
+.table7 .producttitle {
+    display: inline-block;
+    width: 182px;
+    line-height: 12px;
+    padding-left: 0px !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.table7 img {
+    min-width: 58px;
+    max-width: 120px;
+}
+
+.table7 .tableTitle .pic-imgs {
+    width: 120px;
+    height: 120px;
+    display: inline-block;
+}
+
+/* 单张图片 */
+.table7 .tableTitle .pic-img1 .pic-two,
+.table7 .tableTitle .pic-img1 .pic-two img {
+    width: 120px;
+    height: 120px;
+}
+
+
+.table7 .tableTitle .pic-img1 .product-title {
+    padding-top: 55px;
+    padding-left: 10px;
+}
+
+.table7 .tableTitle .pic-img1 .quantity-of-commodities {
+    padding-top: 25px;
+}
+
+.table7 .tableTitle .pic-two {
+    margin: 1px;
+    float: left;
+}
+
+/* 2张图片 */
+.table7 .tableTitle .pic-img2 .pic-two,
+.table7 .tableTitle .pic-img2 .pic-two img {
+    width: 58px;
+    height: 120px;
+}
+
+
+.table7 .tableTitle .pic-img2 .product-title {
+    padding-top: 44px;
+    padding-left: 10px;
+}
+
+.table7 .tableTitle .pic-img2 .quantity-of-commodities {
+    padding-top: 12px;
+}
+
+
+/* 3张图片 */
+.table7 .tableTitle .pic-img3 .pic-two:nth-child(1),
+.table7 .tableTitle .pic-img3 .pic-two:nth-child(1) img {
+    width: 58px;
+    height: 120px;
+}
+
+.table7 .tableTitle .pic-img3 .pic-two,
+.table7 .tableTitle .pic-img3 .pic-two img {
+    width: 58px;
+    height: 58px;
+}
+
+.table7 .tableTitle .pic-img3 .pic-two:nth-child(3) img {
+    margin-top: 2px;
+}
+
+.table7 .tableTitle .pic-img3 .product-title {
+    padding-top: 30px;
+    padding-left: 10px;
+}
+
+.table7 .product-title .quantity-of-commodities span {
+    padding-left: 0px !important;
+}
+
+.table7 .tableTitle .pic-img3 .quantity-of-commodities,
+.table7 .tableTitle .pic-img4 .quantity-of-commodities {
+    padding-top: 3px;
+}
+
+/* 4张图片 */
+.table7 .tableTitle .pic-img4 .pic-two,
+.table7 .tableTitle .pic-img4 .pic-two img {
+    width: 58px;
+    height: 58px;
+}
+
+.table7 .tableTitle .pic-img4 .product-title {
+    padding-top: 3px;
+    padding-left: 10px;
+}
+
+.table7 .tableTitle .pic-two img {
+    object-fit: cover;
+}
+
+.table7 .product-title .textTwoOver span {
+    padding-left: 40px;
+}
+
+.table7 .textTwoOver {
+    padding-bottom: 4px;
+}
+
+.table7 .amount-of-money {
+    color: #F05654;
+    padding-top: 39px;
+    height: 70px;
+}
+
+.table7 .address {
+    height: 53px;
+    padding-bottom: 15px;
+    padding-top: 37px;
+    color: #333333;
+}
+
+
+.table7 .state {
+    height: 70px;
+    color: #333333;
+    padding-top: 36px;
+}
+
+.table7 .operation {
+    float: right;
+}
+
+.table7 .operation a {
+    margin-left: 18px;
+}
+
+.table7 .layui-bg-blue {
+    background-color: #54ACF0 !important;
+    margin-right: 2px;
+}
+
+.table7 .deliver-goods {
+    margin-right: 15px;
+}
+
+.table7 td .layui-badge-rim {
+    background-color: transparent;
+    border-color: #54ACF0;
+    color: #54ACF0;
 }
