--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -384,6 +384,73 @@ body.large .layui-side.large {
 }
 
 /********** 公用类名 ***********/
+/* 字体颜色 */
+.clwhite {
+	color: #fff;
+}
+
+.cl3 {
+	color: #333;
+}
+
+.cl6 {
+	color: #666;
+}
+
+.cl9 {
+	color: #999;
+}
+
+.cl-red {
+	color: #f05654;
+}
+
+.cl-blue {
+	color: #2aa7d6;
+}
+
+/* 字体大小 */
+
+.fs-12 {
+	font-size: 12px;
+}
+
+.fs-14 {
+	font-size: 14px;
+}
+
+.fs-16 {
+	font-size: 16px;
+}
+
+.fs-18 {
+	font-size: 18px !important;
+}
+
+.fs-20 {
+	font-size: 20px;
+}
+
+.fs-22 {
+	font-size: 22px;
+}
+
+.fs-24 {
+	font-size: 24px;
+}
+
+.fs-26 {
+	font-size: 26px;
+}
+
+.fs-30 {
+	font-size: 30px;
+}
+
+/* 字体样式 */
+.pf-b {
+	font-family: PingFangBold;
+}
 /* 行内元素 */
 .display-inline {
     display: inline-block;
@@ -423,7 +490,48 @@ body.large .layui-side.large {
     opacity: 0;
 }
 
+/* 鼠标悬停内容 */
+.mouseHover {
+	position: absolute;
+	right: 15px;
+	cursor: pointer;
+	top: 9px;
+    color: #999;
+    font-size: 16px;
+}
 
+.mouseHover .hoverContent {
+	position: absolute;
+	bottom: 35px;
+	right: -15px;
+	width: 280px;
+	z-index: 99;
+	display: none;
+}
+
+.mouseHover:hover .hoverContent {
+	display: block;
+}
+
+.mouseHover .hoverContent .hoverBlock {
+	background-color: rgba(0,0,0,0.6);
+	padding: 15px 20px;
+	color: #FFF;
+	border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.06);
+    font-size: 12px;
+	z-index: 99;
+}
+
+.mouseHover .hoverContent .hoverArrow {
+	position: absolute;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 15px 15px 0 15px;
+	border-color: rgba(0,0,0,0.6) transparent transparent transparent;
+}
 
 /* 隐藏滚动条 */
 ::-webkit-scrollbar {
